Non-unified build fixes, late November 2021 edition https://bugs.webkit.org/show_bug.cgi?id=233493

Unreviewed non-unified build fixes.

Source/JavaScriptCore:


* jit/ThunkGenerators.h: Add missing inclusion of CallMode.h header, move header
inclusions inside the ENABLE(JIT) guard.

Source/WebCore:

No new tests needed.


* Modules/mediastream/RTCDataChannelRemoteHandler.cpp: Add missing ProcessQualified.h and
ScriptExecutionContextIdentifier.h headers.
* Modules/mediastream/RTCDataChannelRemoteSource.cpp: Ditto.
* contentextensions/ContentExtensionActions.cpp: Add missing ResourceRequest.h header.
* platform/graphics/filters/FilterImage.h: Add missing forward declarations for the Filter
and FloatRect types.
* platform/graphics/filters/software/FEColorMatrixSoftwareApplier.h: Add missing forward
declaration for the PixelBuffer type.
* platform/graphics/filters/software/FEComponentTransferSoftwareApplier.h: Ditto.
* platform/graphics/filters/software/FEConvolveMatrixSoftwareApplier.h: Add missing
IntPoint.h, IntSize.h, and JavaScriptCore/TypedArrayAdaptersForwardDeclarations.h headers.
* platform/graphics/filters/software/FEGaussianBlurSoftwareApplier.h: Add missing
IntSize.h header.
* platform/graphics/filters/software/FELightingSoftwareApplier.h: Add missing
FilterEffect.h and FilterImageVector.h headers.

Source/WebKit:


* WebProcess/Network/webrtc/RTCDataChannelRemoteManager.h: Add missing
WebCore/ProcessQualified.h header.



Canonical link: https://commits.webkit.org/244559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286176 268f45cc-cd09-0410-ab3c-d52691b4dbfc