Source/WebCore/platform/graphics/filters/software/FEGaussianBlurSoftwareApplier.h
@@ -23,6 +23,7 @@
 #pragma once
 
 #include "FilterEffectApplier.h"
+#include "IntSize.h"
 #include <JavaScriptCore/Forward.h>
 
 namespace WebCore {
